--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "nodemailer": "^7.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "ua-parser-js": "^2.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
